# ojeomneo

./: .env.example  .gitignore  README.md  grafana.json  myrequest.txt  pubspec.yaml  signoz_ojeomneo_dashboard.json
admin/: .env.example  .gitignore  README.md  pyproject.toml
admin/accounts/: admin.py  backends.py  models.py
admin/accounts/migrations/: 0001_initial.py
admin/config/: settings.py  urls.py
admin/menus/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
admin/settings/: admin.py  apps.py  models.py
server/: .env.example  .gitignore  Dockerfile  coverage.html  go.mod  go.sum  myrequest.txt  pyproject.toml
server/.claude/: CLAUDE.md
server/accounts/: admin.py  managers.py  models.py
server/accounts/migrations/: 0001_initial.py
server/accounts/tests/: test_models.py
server/api/v1/: api.py  healthcheck.py
server/cmd/api/: main.go
server/core/models/: __init__.py  base.py
server/core/tests/: test_database_async.py
server/core/utils/: database.py
server/docs/: PROJECT_HISTORY.md  SMTP_SECRET_TEMPLATE.yaml  SMTP_SETUP.md  docs.go  swagger.json  swagger.yaml
server/internal/config/: config.go  database.go  redis.go
server/internal/handler/: app_version.go  auth.go  auth_email.go  error.go  health.go  image.go  menu.go  menu_test.go  sketch.go  sketch_test.go
server/internal/middleware/: cache.go  prometheus.go  ratelimit.go
server/internal/model/: app_version.go  email_verification.go  menu.go  menu_image.go  recommendation.go  user.go  (+1 more)
server/settings/: settings.py  urls.py
server/test_database/: docker-compose.yml
(+170 files in other folders)
